parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> CODIGO
Rule 1     CODIGO -> CONTENIDO
Rule 2     CONTENIDO -> CONTENIDO INSTRUCCIONES
Rule 3     CONTENIDO -> INSTRUCCIONES
Rule 4     INSTRUCCIONES -> DEC_VAR
Rule 5     INSTRUCCIONES -> ASIG_VAR
Rule 6     INSTRUCCIONES -> EST_CONDICIONALES
Rule 7     INSTRUCCIONES -> EST_ITERATIVAS
Rule 8     INSTRUCCIONES -> SENT_CFLUJO
Rule 9     INSTRUCCIONES -> DEC_METODOS
Rule 10    INSTRUCCIONES -> DEC_FUNCIONES
Rule 11    INSTRUCCIONES -> RETORNO
Rule 12    INSTRUCCIONES -> LLAMADA
Rule 13    DEC_VAR -> TIPO_DATO identificador asignacion DATO ptcoma
Rule 14    TIPO_DATO -> private_int
Rule 15    TIPO_DATO -> private_double
Rule 16    TIPO_DATO -> private_string
Rule 17    TIPO_DATO -> private_char
Rule 18    TIPO_DATO -> private_boolean
Rule 19    DATO -> entero
Rule 20    DATO -> decimal
Rule 21    DATO -> cadena
Rule 22    DATO -> char
Rule 23    DATO -> private_true
Rule 24    DATO -> private_false
Rule 25    ASIG_VAR -> identificador asignacion DATO ptcoma
Rule 26    EST_CONDICIONALES -> private_if par_a OPERACION par_b llave_a INSTRUCCIONS llave_b
Rule 27    EST_CONDICIONALES -> private_if par_a OPERACION par_b llave_a INSTRUCCIONS llave_b private_else llave_a INSTRUCCIONS llave_b
Rule 28    OPERACION -> OPERACION E
Rule 29    OPERACION -> E
Rule 30    E -> E oper_suma E
Rule 31    E -> E oper_resta E
Rule 32    E -> E oper_multiplicacion E
Rule 33    E -> E oper_division E
Rule 34    E -> E oper_resto E
Rule 35    E -> E oper_igualacion E
Rule 36    E -> E oper_diferenciacion E
Rule 37    E -> E oper_mayor E
Rule 38    E -> E oper_mayor_igual E
Rule 39    E -> E oper_menor E
Rule 40    E -> E oper_menor_igual E
Rule 41    E -> E oper_and E
Rule 42    E -> E oper_or E
Rule 43    E -> oper_not E
Rule 44    E -> identificador
Rule 45    E -> entero
Rule 46    E -> private_false
Rule 47    E -> private_true
Rule 48    INSTRUCCIONS -> INSTRUCCIONS INSTRUCCIONES2
Rule 49    INSTRUCCIONS -> INSTRUCCIONES2
Rule 50    INSTRUCCIONES2 -> DEC_VAR
Rule 51    INSTRUCCIONES2 -> ASIG_VAR
Rule 52    INSTRUCCIONES2 -> EST_CONDICIONALES
Rule 53    INSTRUCCIONES2 -> EST_ITERATIVAS
Rule 54    INSTRUCCIONES2 -> SENT_CFLUJO
Rule 55    INSTRUCCIONES2 -> RETORNO
Rule 56    INSTRUCCIONES2 -> LLAMADA
Rule 57    EST_ITERATIVAS -> private_while par_a OPERACION par_b llave_a INSTRUCCIONS llave_b
Rule 58    EST_ITERATIVAS -> private_do llave_a INSTRUCCIONS llave_b private_while par_a OPERACION par_b ptcoma
Rule 59    SENT_CFLUJO -> private_break ptcoma
Rule 60    SENT_CFLUJO -> private_continue ptcoma
Rule 61    DEC_METODOS -> private_void identificador par_a PARAMETROS par_b llave_a INSTRUCCIONS llave_b
Rule 62    DEC_METODOS -> private_void identificador par_a par_b llave_a INSTRUCCIONS llave_b
Rule 63    PARAMETROS -> PARAMETROS coma TIPO_DATO identificador
Rule 64    PARAMETROS -> TIPO_DATO identificador
Rule 65    DEC_FUNCIONES -> TIPO_DATO identificador par_a PARAMETROS par_b llave_a INSTRUCCIONS llave_b
Rule 66    DEC_FUNCIONES -> TIPO_DATO identificador par_a par_b llave_a INSTRUCCIONS llave_b
Rule 67    RETORNO -> private_return ptcoma
Rule 68    RETORNO -> private_return DATO ptcoma
Rule 69    LLAMADA -> identificador par_a ARGUMENTOS par_b
Rule 70    LLAMADA -> identificador par_a par_b
Rule 71    ARGUMENTOS -> ARGUMENTOS coma DATO
Rule 72    ARGUMENTOS -> DATO

Terminals, with rules where they appear

asignacion           : 13 25
cadena               : 21
char                 : 22
coma                 : 63 71
decimal              : 20
entero               : 19 45
error                : 
identificador        : 13 25 44 61 62 63 64 65 66 69 70
llave_a              : 26 27 27 57 58 61 62 65 66
llave_b              : 26 27 27 57 58 61 62 65 66
oper_and             : 41
oper_diferenciacion  : 36
oper_division        : 33
oper_igualacion      : 35
oper_mayor           : 37
oper_mayor_igual     : 38
oper_menor           : 39
oper_menor_igual     : 40
oper_multiplicacion  : 32
oper_not             : 43
oper_or              : 42
oper_resta           : 31
oper_resto           : 34
oper_suma            : 30
par_a                : 26 27 57 58 61 62 65 66 69 70
par_b                : 26 27 57 58 61 62 65 66 69 70
private_boolean      : 18
private_break        : 59
private_char         : 17
private_continue     : 60
private_do           : 58
private_double       : 15
private_else         : 27
private_false        : 24 46
private_if           : 26 27
private_int          : 14
private_return       : 67 68
private_string       : 16
private_true         : 23 47
private_void         : 61 62
private_while        : 57 58
ptcoma               : 13 25 58 59 60 67 68

Nonterminals, with rules where they appear

ARGUMENTOS           : 69 71
ASIG_VAR             : 5 51
CODIGO               : 0
CONTENIDO            : 1 2
DATO                 : 13 25 68 71 72
DEC_FUNCIONES        : 10
DEC_METODOS          : 9
DEC_VAR              : 4 50
E                    : 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43
EST_CONDICIONALES    : 6 52
EST_ITERATIVAS       : 7 53
INSTRUCCIONES        : 2 3
INSTRUCCIONES2       : 48 49
INSTRUCCIONS         : 26 27 27 48 57 58 61 62 65 66
LLAMADA              : 12 56
OPERACION            : 26 27 28 57 58
PARAMETROS           : 61 63 65
RETORNO              : 11 55
SENT_CFLUJO          : 8 54
TIPO_DATO            : 13 63 64 65 66

Parsing method: LALR

state 0

    (0) S' -> . CODIGO
    (1) CODIGO -> . CONTENIDO
    (2) CONTENIDO -> . CONTENIDO INSTRUCCIONES
    (3) CONTENIDO -> . INSTRUCCIONES
    (4) INSTRUCCIONES -> . DEC_VAR
    (5) INSTRUCCIONES -> . ASIG_VAR
    (6) INSTRUCCIONES -> . EST_CONDICIONALES
    (7) INSTRUCCIONES -> . EST_ITERATIVAS
    (8) INSTRUCCIONES -> . SENT_CFLUJO
    (9) INSTRUCCIONES -> . DEC_METODOS
    (10) INSTRUCCIONES -> . DEC_FUNCIONES
    (11) INSTRUCCIONES -> . RETORNO
    (12) INSTRUCCIONES -> . LLAMADA
    (13) DEC_VAR -> . TIPO_DATO identificador asignacion DATO ptcoma
    (25) ASIG_VAR -> . identificador asignacion DATO ptcoma
    (26) EST_CONDICIONALES -> . private_if par_a OPERACION par_b llave_a INSTRUCCIONS llave_b
    (27) EST_CONDICIONALES -> . private_if par_a OPERACION par_b llave_a INSTRUCCIONS llave_b private_else llave_a INSTRUCCIONS llave_b
    (57) EST_ITERATIVAS -> . private_while par_a OPERACION par_b llave_a INSTRUCCIONS llave_b
    (58) EST_ITERATIVAS -> . private_do llave_a INSTRUCCIONS llave_b private_while par_a OPERACION par_b ptcoma
    (59) SENT_CFLUJO -> . private_break ptcoma
    (60) SENT_CFLUJO -> . private_continue ptcoma
    (61) DEC_METODOS -> . private_void identificador par_a PARAMETROS par_b llave_a INSTRUCCIONS llave_b
    (62) DEC_METODOS -> . private_void identificador par_a par_b llave_a INSTRUCCIONS llave_b
    (65) DEC_FUNCIONES -> . TIPO_DATO identificador par_a PARAMETROS par_b llave_a INSTRUCCIONS llave_b
    (66) DEC_FUNCIONES -> . TIPO_DATO identificador par_a par_b llave_a INSTRUCCIONS llave_b
    (67) RETORNO -> . private_return ptcoma
    (68) RETORNO -> . private_return DATO ptcoma
    (69) LLAMADA -> . identificador par_a ARGUMENTOS par_b
    (70) LLAMADA -> . identificador par_a par_b
    (14) TIPO_DATO -> . private_int
    (15) TIPO_DATO -> . private_double
    (16) TIPO_DATO -> . private_string
    (17) TIPO_DATO -> . private_char
    (18) TIPO_DATO -> . private_boolean

    identificador   shift and go to state 14
    private_if      shift and go to state 15
    private_while   shift and go to state 16
    private_do      shift and go to state 17
    private_break   shift and go to state 18
    private_continue shift and go to state 19
    private_void    shift and go to state 20
    private_return  shift and go to state 21
    private_int     shift and go to state 22
    private_double  shift and go to state 23
    private_string  shift and go to state 24
    private_char    shift and go to state 25
    private_boolean shift and go to state 26

    CODIGO                         shift and go to state 1
    CONTENIDO                      shift and go to state 2
    INSTRUCCIONES                  shift and go to state 3
    DEC_VAR                        shift and go to state 4
    ASIG_VAR                       shift and go to state 5
    EST_CONDICIONALES              shift and go to state 6
    EST_ITERATIVAS                 shift and go to state 7
    SENT_CFLUJO                    shift and go to state 8
    DEC_METODOS                    shift and go to state 9
    DEC_FUNCIONES                  shift and go to state 10
    RETORNO                        shift and go to state 11
    LLAMADA                        shift and go to state 12
    TIPO_DATO                      shift and go to state 13

state 1

    (0) S' -> CODIGO .



state 2

    (1) CODIGO -> CONTENIDO .
    (2) CONTENIDO -> CONTENIDO . INSTRUCCIONES
    (4) INSTRUCCIONES -> . DEC_VAR
    (5) INSTRUCCIONES -> . ASIG_VAR
    (6) INSTRUCCIONES -> . EST_CONDICIONALES
    (7) INSTRUCCIONES -> . EST_ITERATIVAS
    (8) INSTRUCCIONES -> . SENT_CFLUJO
    (9) INSTRUCCIONES -> . DEC_METODOS
    (10) INSTRUCCIONES -> . DEC_FUNCIONES
    (11) INSTRUCCIONES -> . RETORNO
    (12) INSTRUCCIONES -> . LLAMADA
    (13) DEC_VAR -> . TIPO_DATO identificador asignacion DATO ptcoma
    (25) ASIG_VAR -> . identificador asignacion DATO ptcoma
    (26) EST_CONDICIONALES -> . private_if par_a OPERACION par_b llave_a INSTRUCCIONS llave_b
    (27) EST_CONDICIONALES -> . private_if par_a OPERACION par_b llave_a INSTRUCCIONS llave_b private_else llave_a INSTRUCCIONS llave_b
    (57) EST_ITERATIVAS -> . private_while par_a OPERACION par_b llave_a INSTRUCCIONS llave_b
    (58) EST_ITERATIVAS -> . private_do llave_a INSTRUCCIONS llave_b private_while par_a OPERACION par_b ptcoma
    (59) SENT_CFLUJO -> . private_break ptcoma
    (60) SENT_CFLUJO -> . private_continue ptcoma
    (61) DEC_METODOS -> . private_void identificador par_a PARAMETROS par_b llave_a INSTRUCCIONS llave_b
    (62) DEC_METODOS -> . private_void identificador par_a par_b llave_a INSTRUCCIONS llave_b
    (65) DEC_FUNCIONES -> . TIPO_DATO identificador par_a PARAMETROS par_b llave_a INSTRUCCIONS llave_b
    (66) DEC_FUNCIONES -> . TIPO_DATO identificador par_a par_b llave_a INSTRUCCIONS llave_b
    (67) RETORNO -> . private_return ptcoma
    (68) RETORNO -> . private_return DATO ptcoma
    (69) LLAMADA -> . identificador par_a ARGUMENTOS par_b
    (70) LLAMADA -> . identificador par_a par_b
    (14) TIPO_DATO -> . private_int
    (15) TIPO_DATO -> . private_double
    (16) TIPO_DATO -> . private_string
    (17) TIPO_DATO -> . private_char
    (18) TIPO_DATO -> . private_boolean

    $end            reduce using rule 1 (CODIGO -> CONTENIDO .)
    identificador   shift and go to state 14
    private_if      shift and go to state 15
    private_while   shift and go to state 16
    private_do      shift and go to state 17
    private_break   shift and go to state 18
    private_continue shift and go to state 19
    private_void    shift and go to state 20
    private_return  shift and go to state 21
    private_int     shift and go to state 22
    private_double  shift and go to state 23
    private_string  shift and go to state 24
    private_char    shift and go to state 25
    private_boolean shift and go to state 26

    INSTRUCCIONES                  shift and go to state 27
    DEC_VAR                        shift and go to state 4
    ASIG_VAR                       shift and go to state 5
    EST_CONDICIONALES              shift and go to state 6
    EST_ITERATIVAS                 shift and go to state 7
    SENT_CFLUJO                    shift and go to state 8
    DEC_METODOS                    shift and go to state 9
    DEC_FUNCIONES                  shift and go to state 10
    RETORNO                        shift and go to state 11
    LLAMADA                        shift and go to state 12
    TIPO_DATO                      shift and go to state 13

state 3

    (3) CONTENIDO -> INSTRUCCIONES .

    identificador   reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_if      reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_while   reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_do      reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_break   reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_continue reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_void    reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_return  reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_int     reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_double  reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_string  reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_char    reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    private_boolean reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)
    $end            reduce using rule 3 (CONTENIDO -> INSTRUCCIONES .)


state 4

    (4) INSTRUCCIONES -> DEC_VAR .

    identificador   reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_if      reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_while   reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_do      reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_break   reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_continue reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_void    reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_return  reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_int     reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_double  reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_string  reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_char    reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    private_boolean reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)
    $end            reduce using rule 4 (INSTRUCCIONES -> DEC_VAR .)


state 5

    (5) INSTRUCCIONES -> ASIG_VAR .

    identificador   reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_if      reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_while   reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_do      reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_break   reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_continue reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_void    reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_return  reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_int     reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_double  reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_string  reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_char    reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    private_boolean reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)
    $end            reduce using rule 5 (INSTRUCCIONES -> ASIG_VAR .)


state 6

    (6) INSTRUCCIONES -> EST_CONDICIONALES .

    identificador   reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_if      reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_while   reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_do      reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_break   reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_continue reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_void    reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_return  reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_int     reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_double  reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_string  reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_char    reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    private_boolean reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)
    $end            reduce using rule 6 (INSTRUCCIONES -> EST_CONDICIONALES .)


state 7

    (7) INSTRUCCIONES -> EST_ITERATIVAS .
